[gd_scene load_steps=51 format=2]

[ext_resource path="res://assets/Textures_v2/Universal/Bars/scrollbar_detail.png" type="Texture" id=1]
[ext_resource path="res://assets/Fonts_v2/PT_Sans/PTSans-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/Textures_v2/Universal/Bars/scrollbar.png" type="Texture" id=3]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/VScrollBar.tres" type="Theme" id=4]
[ext_resource path="res://assets/images/gui/inventory/icon_armor1.png" type="Texture" id=5]
[ext_resource path="res://assets/images/iconsgear/ArmorBasic.png" type="Texture" id=6]
[ext_resource path="res://assets/images/gui/menu/menubuttonnorm.png" type="Texture" id=7]
[ext_resource path="res://assets/images/iconsitems/gold.png" type="Texture" id=8]
[ext_resource path="res://assets/images/gui/menu/menubuttonhl.png" type="Texture" id=9]
[ext_resource path="res://assets/images/gui/menu/menubuttonpressed.png" type="Texture" id=10]
[ext_resource path="res://assets/images/gui/menu/confirmpanel.png" type="Texture" id=11]
[ext_resource path="res://assets/Fonts_v2/Ledger/Ledger-Regular.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_potion.png" type="Texture" id=13]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_armor_pressed.png" type="Texture" id=14]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_weapon_hover.png" type="Texture" id=15]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_craft_pressed.png" type="Texture" id=16]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_weapon.png" type="Texture" id=17]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Panels/panel_inventory_pressed.png" type="Texture" id=18]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_armor.png" type="Texture" id=19]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_potion_pressed.png" type="Texture" id=20]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Panels/panel_inventory.png" type="Texture" id=21]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_cosm_pressed.png" type="Texture" id=22]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_food_hover.png" type="Texture" id=23]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_all_hover.png" type="Texture" id=24]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_cosm_hover.png" type="Texture" id=25]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_potion_hover.png" type="Texture" id=26]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_food_pressed.png" type="Texture" id=27]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_resources_pressed.png" type="Texture" id=28]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_craft_hover.png" type="Texture" id=29]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_armor_hover.png" type="Texture" id=30]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_weapon_pressed.png" type="Texture" id=31]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_resources.png" type="Texture" id=32]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_craft.png" type="Texture" id=33]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Panels/panel_inventory_hover.png" type="Texture" id=34]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_resources_hover.png" type="Texture" id=35]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_food.png" type="Texture" id=36]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_all_pressed.png" type="Texture" id=37]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_cosm.png" type="Texture" id=38]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Panels/panel_inventory_items.png" type="Texture" id=39]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_all.png" type="Texture" id=40]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/search.tres" type="StyleBox" id=41]
[ext_resource path="res://gui_modules/Inventory/Scripts/InventoryListModule.gd" type="Script" id=42]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 39 )
region_rect = Rect2( 0, 0, 595, 1050 )
margin_left = 68.0
margin_right = 68.0
margin_top = 68.0
margin_bottom = 25.0

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 12, 48 )
margin_left = 3.0
margin_right = 3.0
margin_top = 3.0
margin_bottom = 3.0

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 12, 48 )
margin_left = 3.0
margin_right = 3.0
margin_top = 3.0
margin_bottom = 3.0

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 12, 256 )
margin_left = 2.0
margin_right = 2.0
margin_top = 2.0
margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 12, 48 )
margin_left = 3.0
margin_right = 3.0
margin_top = 3.0
margin_bottom = 3.0

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 36
use_filter = true
font_data = ExtResource( 12 )

[node name="InventoryListModule" type="Panel"]
light_mask = 0
margin_right = 595.0
margin_bottom = 1050.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 42 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scroller" type="Control" parent="."]
light_mask = 0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VScrollBar" type="VScrollBar" parent="Scroller"]
visible = false
light_mask = 0
margin_left = 19.0
margin_top = 251.0
margin_right = 31.0
margin_bottom = 1021.0
rect_min_size = Vector2( 0, 300 )
custom_styles/grabber_highlight = SubResource( 2 )
custom_styles/grabber = SubResource( 3 )
custom_styles/scroll = SubResource( 4 )
custom_styles/grabber_pressed = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Scroller"]
light_mask = 0
margin_left = 51.2322
margin_top = 251.0
margin_right = 551.232
margin_bottom = 1033.0
theme = ExtResource( 4 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="VBoxContainer" parent="Scroller/ScrollContainer"]
light_mask = 0
margin_right = 500.0
size_flags_horizontal = 3

[node name="Button" type="TextureButton" parent="Scroller/ScrollContainer/GridContainer"]
visible = false
light_mask = 0
margin_right = 500.0
margin_bottom = 52.0
rect_min_size = Vector2( 50, 50 )
toggle_mode = true
texture_normal = ExtResource( 21 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 34 )

[node name="Image" type="TextureRect" parent="Scroller/ScrollContainer/GridContainer/Button"]
show_behind_parent = true
light_mask = 0
margin_left = 455.287
margin_top = 5.96381
margin_right = 494.287
margin_bottom = 43.9638
rect_min_size = Vector2( 5, 0 )
mouse_filter = 2
texture = ExtResource( 6 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Scroller/ScrollContainer/GridContainer/Button"]
light_mask = 0
margin_left = 54.0
margin_top = 8.0
margin_right = 381.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Item Name"
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Type" type="TextureRect" parent="Scroller/ScrollContainer/GridContainer/Button"]
light_mask = 0
margin_left = 1.0
margin_top = 1.0
margin_right = 48.0
margin_bottom = 49.0
mouse_filter = 2
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="Number" type="Label" parent="Scroller/ScrollContainer/GridContainer/Button"]
light_mask = 0
margin_left = 356.0
margin_top = 8.0
margin_right = 428.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0000"
align = 2
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HiddenContainer" type="ScrollContainer" parent="."]
visible = false
light_mask = 0
margin_left = 81.0
margin_top = 230.0
margin_right = 554.0
margin_bottom = 702.0
scroll_horizontal_enabled = false

[node name="GridContainer" type="GridContainer" parent="HiddenContainer"]
columns = 7

[node name="HBoxContainer" type="HBoxContainer" parent="."]
light_mask = 0
margin_left = 48.0
margin_top = 172.0
margin_right = 550.0
margin_bottom = 226.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="all" type="TextureButton" parent="HBoxContainer"]
light_mask = 0
margin_right = 54.0
margin_bottom = 54.0
hint_tooltip = "INVENTORYALL"
toggle_mode = true
texture_normal = ExtResource( 40 )
texture_pressed = ExtResource( 37 )
texture_hover = ExtResource( 24 )

[node name="food" type="TextureButton" parent="HBoxContainer"]
light_mask = 0
margin_left = 64.0
margin_right = 118.0
margin_bottom = 54.0
hint_tooltip = "INVENTORYMATERIAL"
toggle_mode = true
texture_normal = ExtResource( 36 )
texture_pressed = ExtResource( 27 )
texture_hover = ExtResource( 23 )

[node name="usable" type="TextureButton" parent="HBoxContainer"]
light_mask = 0
margin_left = 128.0
margin_right = 182.0
margin_bottom = 54.0
hint_tooltip = "INVENTORYUSE"
toggle_mode = true
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 20 )
texture_hover = ExtResource( 26 )

[node name="material" type="TextureButton" parent="HBoxContainer"]
light_mask = 0
margin_left = 192.0
margin_right = 246.0
margin_bottom = 54.0
hint_tooltip = "INVENTORYMATERIAL"
toggle_mode = true
texture_normal = ExtResource( 32 )
texture_pressed = ExtResource( 28 )
texture_hover = ExtResource( 35 )

[node name="tool" type="TextureButton" parent="HBoxContainer"]
light_mask = 0
margin_left = 256.0
margin_right = 310.0
margin_bottom = 54.0
hint_tooltip = "INVENTORYTOOL"
toggle_mode = true
texture_normal = ExtResource( 33 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 29 )

[node name="weapon" type="TextureButton" parent="HBoxContainer"]
light_mask = 0
margin_left = 320.0
margin_right = 374.0
margin_bottom = 54.0
hint_tooltip = "INVENTORYWEAPON"
toggle_mode = true
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 31 )
texture_hover = ExtResource( 15 )

[node name="armor" type="TextureButton" parent="HBoxContainer"]
light_mask = 0
margin_left = 384.0
margin_right = 438.0
margin_bottom = 54.0
hint_tooltip = "INVENTORYARMOR"
toggle_mode = true
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 30 )

[node name="costume" type="TextureButton" parent="HBoxContainer"]
light_mask = 0
margin_left = 448.0
margin_right = 502.0
margin_bottom = 54.0
hint_tooltip = "INVENTORYCOSTUME"
toggle_mode = true
texture_normal = ExtResource( 38 )
texture_pressed = ExtResource( 22 )
texture_hover = ExtResource( 25 )

[node name="NumberSelectPanel" type="TextureRect" parent="."]
visible = false
light_mask = 0
margin_left = 197.0
margin_top = 206.0
margin_right = 669.0
margin_bottom = 445.0
texture = ExtResource( 11 )

[node name="RichTextLabel" type="RichTextLabel" parent="NumberSelectPanel"]
light_mask = 0
margin_left = 78.0
margin_top = 61.0
margin_right = 388.0
margin_bottom = 109.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "Purchase X?"
text = "Purchase X?"

[node name="SpinBox" type="SpinBox" parent="NumberSelectPanel"]
light_mask = 0
margin_left = 171.0
margin_top = 127.0
margin_right = 271.0
margin_bottom = 161.0

[node name="ConfirmButton" type="TextureButton" parent="NumberSelectPanel"]
light_mask = 0
margin_left = 38.0
margin_top = 161.0
margin_right = 206.0
margin_bottom = 216.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="NumberSelectPanel/ConfirmButton"]
light_mask = 0
margin_left = 12.0
margin_top = 17.0
margin_right = 154.0
margin_bottom = 41.0
text = "CONFIRM"
align = 1

[node name="CancelButton" type="TextureButton" parent="NumberSelectPanel"]
light_mask = 0
margin_left = 258.0
margin_top = 161.0
margin_right = 426.0
margin_bottom = 216.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="NumberSelectPanel/CancelButton"]
light_mask = 0
margin_left = 12.0
margin_top = 17.0
margin_right = 154.0
margin_bottom = 41.0
text = "CANCEL"
align = 1

[node name="MaxButton" type="Button" parent="NumberSelectPanel"]
visible = false
light_mask = 0
margin_left = 142.0
margin_top = 123.0
margin_right = 302.0
margin_bottom = 153.0
text = "Max"

[node name="EndPrice" type="Label" parent="NumberSelectPanel"]
light_mask = 0
margin_left = 284.0
margin_top = 133.0
margin_right = 406.0
margin_bottom = 157.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "= 100"

[node name="BasePrice" type="Label" parent="NumberSelectPanel"]
light_mask = 0
margin_left = 38.0
margin_top = 132.0
margin_right = 160.0
margin_bottom = 156.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "100*"
align = 2

[node name="TextureRect" type="TextureRect" parent="NumberSelectPanel"]
light_mask = 0
margin_left = 376.0
margin_top = 117.0
margin_right = 426.0
margin_bottom = 170.0
mouse_filter = 2
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="SearchFilter" type="LineEdit" parent="."]
light_mask = 0
margin_left = 48.0
margin_top = 115.61
margin_right = 548.0
margin_bottom = 167.61
custom_styles/normal = ExtResource( 41 )
custom_fonts/font = SubResource( 7 )
custom_colors/selection_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/cursor_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/clear_button_color_pressed = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_selected = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/clear_button_color = Color( 0, 0, 0, 1 )
custom_constants/minimum_spaces = 3
placeholder_text = "  Filter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
light_mask = 0
margin_right = 595.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "Inventory"
align = 1
valign = 1
